	* WooCommerce: Removed any legacy code for WooCommerce versions prior to 3.0.
	* WooCommerce: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > WooCommerce*.
	* WPML: Fixed WPML options showing on Theme Options, when WPML isn't installed.
* New: Added support for applying background shade to individual columns in the layout builder.
* Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Improvement: On all theme bases, if no "Primary Navigation" menu is assigned, menu will not display (previously, only the Agent base behaved like this).
* Improvement: Collapsible widget area locations no longer have the word "Ads" in their titles.
* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.
* Removed: The deprecated "featured" areas (as of framework 2.5), using `themeblvd_featured_*` action hooks have been completely removed.
* Updated: Chart.js to 2.7.1.
* Updated: easyPieChart to 2.1.6.
* Updated: Isotope to 3.0.4.

* **Important Developer Notes:**
	* If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.
	* Removed the deprecated action hook, `themeblvd_header_above`; use `themeblvd_header_content` or `themeblvd_header_top` instead.
	* Removed the deprecated action hook, `themeblvd_header_above`; use `themeblvd_header_content` or `themeblvd_header_top` instead.